--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <!--Flex Container for Logo/menu-->
                 <div class="flex items-center space-x-20">
                     <!--LOGO-->
-                    <img src="../images/logo.svg" class="" alt="">
+                    <img src="./images/logo.svg" class="" alt="">
                     <!--Left Menu-->
                     <div class="hidden space-x-8 font-bold text-lg lg:flex">
                         <a href="" class="text-gray-400 hover:text-black">Features</a>
@@ -69,7 +69,7 @@
         <div class="flex flex-col p-5 mx-auto justify-center items-center space-y-10 lg:flex-row lg:space-y-0">
 
             <!--Image-->
-            <img src="../images/illustration-working.svg" class="mb-10 mx-auto md:max-w-md lg:hidden" alt="">
+            <img src="./images/illustration-working.svg" class="mb-10 mx-auto md:max-w-md lg:hidden" alt="">
 
             <!--Content-->
             <div class="flex flex-col p-5 mx-auto max-w-xl space-y-10 lg:justify-start">
@@ -88,7 +88,7 @@
                     Started</button>
             </div>
             <!--Desktop Image-->
-            <img src="../images/illustration-working.svg" class="hidden max-w-xl mx-auto pb-12 lg:flex lg:items-start"
+            <img src="./images/illustration-working.svg" class="hidden max-w-xl mx-auto pb-12 lg:flex lg:items-start"
                 alt="">
         </div>
     </section>
@@ -217,7 +217,7 @@
             <div class="bg-white p-5 m-5 z-40 h-72 lg:-translate-y-20">
 
                 <div class="p-4 m-3 -mt-16 w-16 mx-auto bg-violet-950 rounded-full">
-                    <img src="../images/icon-brand-recognition.svg" alt="">
+                    <img src="./images/icon-brand-recognition.svg" alt="">
                 </div>
 
                 <h3 class="font-bold text-3xl font-sans text-center mx-auto p-5 ">
@@ -237,7 +237,7 @@
             <div class="bg-white p-5 m-5 z-40 h-72 lg:mb-10 lg:-translate-y-14">
 
                 <div class="p-4 m-3 -mt-16 w-16 mx-auto bg-violet-950 rounded-full">
-                    <img src="../images/icon-detailed-records.svg" alt="">
+                    <img src="./images/icon-detailed-records.svg" alt="">
                 </div>
 
                 <h3 class="font-bold text-3xl font-sans text-center mx-auto p-5 ">
@@ -255,7 +255,7 @@
             <div class="bg-white p-5 m-5 h-72 z-40 lg:-translate-y-5 ">
 
                 <div class="p-4 m-3  -mt-16 w-16 mx-auto bg-violet-950 rounded-full">
-                    <img src="../images/icon-fully-customizable.svg" alt="">
+                    <img src="./images/icon-fully-customizable.svg" alt="">
                 </div>
 
                 <h3 class="font-bold text-3xl font-sans text-center mx-auto p-5 ">
@@ -294,7 +294,7 @@
             class="flex justify-center overflow-x-hidden items-center flex-col text-center text-gray-300  bg-[#1b1b1b] lg:flex-row lg:justify-start lg:space-x-32 ">
 
             <!--Logo-->
-            <img src="../images/logo-white.svg" alt="" class="h-12 mt-10 md:mr-16
+            <img src="./images/logo-white.svg" alt="" class="h-12 mt-10 md:mr-16
           ">
             <!--Features-->
             <div class="flex flex-col mt-10 lg:mt-3 space-y-4
@@ -336,10 +336,10 @@
 
             <!--Socials-->
             <div class="flex m-10 lg:justify-end  lg:items-end  ">
-                <img src="../images/icon-facebook.svg " alt="" class="m-5 hover:cursor-pointer">
-                <img src="../images/icon-twitter.svg" alt="" class="m-5 hover:cursor-pointer">
-                <img src="../images/icon-pinterest.svg" alt="" class="m-5 hover:cursor-pointer">
-                <img src="../images/icon-instagram.svg" alt="" class="m-5 hover:cursor-pointer">
+                <img src="./images/icon-facebook.svg " alt="" class="m-5 hover:cursor-pointer">
+                <img src="./images/icon-twitter.svg" alt="" class="m-5 hover:cursor-pointer">
+                <img src="./images/icon-pinterest.svg" alt="" class="m-5 hover:cursor-pointer">
+                <img src="./images/icon-instagram.svg" alt="" class="m-5 hover:cursor-pointer">
             </div>
         </div>
         </div>
