--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 </div>
 
                 <button
-                    class="bg-[#14d3d3] p-3 w-full font-bold mt-4 text-center text-xl mx-auto rounded-lg text-white transition duration-300 hover:bg-[#7cdbdb] lg:mx-5 lg:mb-5 lg:w-52 ">Copy</button>
+                    class="copy-btn bg-[#14d3d3] p-3 w-full font-bold mt-4 text-center text-xl mx-auto rounded-lg text-white transition duration-300 hover:bg-[#7cdbdb] lg:mx-5 lg:mb-5 lg:w-52 ">Copy</button>
             </div>
         </div>
 
@@ -163,7 +163,7 @@
                 </div>
 
                 <button
-                    class="bg-[#14d3d3] p-3 w-full font-bold text-center text-xl mx-auto rounded-lg text-white transition duration-300 hover:bg-[#7cdbdb] lg:mx-5 lg:mb-5 lg:w-52 ">Copy</button>
+                    class="copy-btn bg-[#14d3d3] p-3 w-full font-bold text-center text-xl mx-auto rounded-lg text-white transition duration-300 hover:bg-[#7cdbdb] lg:mx-5 lg:mb-5 lg:w-52 ">Copy</button>
             </div>
         </div>
 
@@ -183,7 +183,7 @@
                 </div>
 
                 <button
-                    class="bg-[#14d3d3] p-3 w-full font-bold text-center text-xl mx-auto rounded-lg text-white transition duration-300 hover:bg-[#7cdbdb] lg:mx-5 lg:mb-5 lg:w-52 ">Copy</button>
+                    class="copy-btn bg-[#14d3d3] p-3 w-full font-bold text-center text-xl mx-auto rounded-lg text-white transition duration-300 hover:bg-[#7cdbdb] lg:mx-5 lg:mb-5 lg:w-52 ">Copy</button>
             </div>
         </div>
 
